# 16vmart

api/: main.py  pyproject.toml  seed_categories.py  seed_products.py  settings.py
api/alembic/: env.py
api/alembic/versions/: 04a109b8f370_otp_added_to_user.py  16e96d50f319_vendor_table_added.py  25293daf3e78_shopping_models_added.py  4281fbc5c303_vendor_order_table_updated.py  60bd23bbf79d_idompotent_key_added_to_order.py  6c95f147f23e_create_defualt_db.py  946608b12df9_address_table_added.py  9a068b72f4b9_changer_order_number_to_string.py  a9fc7c4bd567_vendor_order_table_updated.py  b76eda910895_initial_db.py  c61fa7509f5f_shopping_models_added.py  d742d56ec766_vendor_order_table_updated.py  e410e318e89d_option_column_added_to_attribute_key.py  ec572b4a1f27_vendor_order_table_updated.py  ec7ef5d48ec0_vendor_table_added.py  ee3983b13a6d_user_and_session_tables_defined.py  ee713868bcb7_address_table_added.py  fd74fbea260d_option_column_added_to_attribute_key.py  ff8b7ad6e0f6_otp_removed_from_user.py
api/bg_task/: auth.py  config.py  order.py
api/email_templates/: order_payment_success.html  reset_password.html  welcome.html
api/libs/: cloudinary.py  deps.py  jwt.py  logger.py  mail_config.py  redis.py  state_city.py
api/models/: __init__.py  db.py  product.py  shopping.py  user.py
api/routers/: auth.py
api/routers/v1/: auth.py  cart.py  cat.py  order.py  product.py  products.py  user.py  wishlist.py
api/schemas/: cart.py  checkout.py  product.py  shopping.py  user.py
api/schemas/admin/: order.py  product.py  store.py  (+1 more)
api/seed_data/: category_seed.json
(+77 files in other folders)
