[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "fastapi-mail>=1.6.5",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pyyml>=0.0.2",
    "redis[hiredis]>=5.3.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "ua-parser>=1.0.2",
    "user-agents>=2.2.0",
    "uvicorn>=0.51.0",
]
